// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer - nevybrané; někdo jiný 1`] = `
<div
  className="StartovniCislaProTyp__grid"
>
  <div
    className="StartovniCislaProTyp__item VyberStartCislo-zabrane"
    role="button"
    tabIndex="-1"
  >
    7
  </div>
  <div
    className="StartovniCislaProTyp__item VyberStartCislo-volne"
    onClick={[Function]}
    onKeyPress={[Function]}
    role="button"
    tabIndex="-1"
  >
    10
  </div>
</div>
`;

exports[`Renderer - vybrané 1`] = `
<div
  className="StartovniCislaProTyp__grid"
>
  <div
    className="StartovniCislaProTyp__item VyberStartCislo-vybrane"
    onClick={[Function]}
    onKeyPress={[Function]}
    role="button"
    tabIndex="-1"
  >
    7
  </div>
  <div
    className="StartovniCislaProTyp__item VyberStartCislo-volne"
    onClick={[Function]}
    onKeyPress={[Function]}
    role="button"
    tabIndex="-1"
  >
    10
  </div>
</div>
`;

exports[`Renderer 1`] = `
<div
  className="StartovniCislaProTyp__grid"
>
  <div
    className="StartovniCislaProTyp__item VyberStartCislo-zabrane"
    role="button"
    tabIndex="-1"
  >
    7
  </div>
  <div
    className="StartovniCislaProTyp__item VyberStartCislo-volne"
    onClick={[Function]}
    onKeyPress={[Function]}
    role="button"
    tabIndex="-1"
  >
    10
  </div>
</div>
`;

exports[`renders VyberStartCislo 1`] = `
<Connect(StartovniCislaProTyp)
  Renderer={[Function]}
  jenStartujici={false}
  odstartovani={false}
  onSelect={[MockFunction]}
  typ="koloběžka"
/>
`;
